changed to be able to access only user's own Todo

--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -14,5 +14,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_todo_path(@todo) %> |
-<%= link_to 'Back', todos_path %>
+<%= link_to 'Edit', edit_user_todo_path(current_user, @todo) %> |
+<%= link_to 'Back', user_todos_path(current_user) %>
