--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing todo</h1>
 
-<% form_for(@todo) do |f| %>
+<% form_for([current_user, @todo]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -20,5 +20,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Show', @todo %> |
-<%= link_to 'Back', todos_path %>
+<%= link_to 'Show', [current_user, @todo] %> |
+<%= link_to 'Back', user_todos_path(current_user) %>
