--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -12,13 +12,13 @@
     <td><%=h todo.body %></td>
     <td><%=h todo.due %></td>
     <td><%=h todo.done %></td>
-    <td><%= link_to 'Show', todo %></td>
-    <td><%= link_to 'Edit', edit_todo_path(todo) %></td>
-    <td><%= link_to 'Destroy', todo, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Show', [current_user, todo] %></td>
+    <td><%= link_to 'Edit', edit_user_todo_path(current_user, todo) %></td>
+    <td><%= link_to 'Destroy', [current_user, todo], :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New todo', new_todo_path %>
+<%= link_to 'New todo', new_user_todo_path(current_user) %>
