--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New todo</h1>
 
-<% form_for(@todo) do |f| %>
+<% form_for([current_user, @todo]) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -20,4 +20,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', todos_path %>
+<%= link_to 'Back', user_todos_path(current_user) %>
